--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,3 +24,28 @@ a {
     background: black;
   }
 }
+
+
+.venues {
+
+  &-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-image: url("/img/venue-1.jpg");
+  }
+
+  &-img-wrap {
+    width: 600px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    pointer-events: none;
+    visibility: hidden;
+    padding-bottom: 25vw;
+  }
+}
