sidebar and other adjusts in css

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,7 +40,7 @@ a {
 
   &-img-wrap {
     width: 600px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     overflow: hidden;
