--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -6,30 +6,48 @@
     padding: 2rem;
     .date{
         width: 100%;
-        font-size: 6rem;
+        font-size: 4.3rem;
         font-family: 'Times New Roman', Times, serif;
+        opacity: .4;
+        transition: all, .2s;
     }
     .content{
         height: 0;
         overflow: hidden;
-        width: 500px;
+        width: 600px;
         align-self: flex-end;
+        margin-top: 2rem;
+        transition: all, .2s;
+        opacity: .4;
         b{
             font-size: 18px;
         }
         p{
-            font-size: 12px;
+            font-size: 16px;
         }
         span{
             font-style: italic;
+            color: rgb(78, 78, 78);
         }
     }
 
     &:hover{
         background-color: rgb(13, 13, 13);
+        .date{
+            opacity: 1;
+        }
         .content{
-            height: auto;
+            opacity: 1;
+            height: 350px;
         }
     }
 }
 
+
+.wrapper{
+    display: flex;
+    width: 100%;
+    .itens{
+        flex: 1;
+    }
+}
