--- a/components/Sidebar/style.module.scss
+++ b/components/Sidebar/style.module.scss
@@ -4,6 +4,7 @@
     overflow: hidden;
     position: sticky;
     top: 0;
+    background-color: #0d1116;
     border-right: 1px solid rgb(37, 37, 37);
     padding: 30px;
 
