--- a/components/Sidebar/style.module.scss
+++ b/components/Sidebar/style.module.scss
@@ -18,6 +18,17 @@
         padding-left: 10px;
     }
 
+    span{
+        display: block;
+        padding: 5px;
+        border-radius: 5px;
+        background-color: red;
+        color: #fff;
+        margin-bottom: 20px;
+        width: 100%;
+        text-align: center;
+    }
+
     .form{
         width: 100%;
         .group{
