--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -68,3 +68,14 @@
         flex: 1;
     }
 }
+
+.loading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    font-size: 3rem;
+    font-weight: bold;
+    color: #fff;
+}
