--- a/components/Sidebar/style.module.scss
+++ b/components/Sidebar/style.module.scss
@@ -14,6 +14,15 @@
 
     padding-top: 30px;
 
+    @media (max-width: 768px){
+        width: 100%;
+        height: auto;
+        position: initial;
+        top: 0;
+        left: 0;
+
+    }
+
     .logo{
         padding-left: 10px;
     }
