--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -10,6 +10,9 @@
         font-family: 'Times New Roman', Times, serif;
         opacity: .4;
         transition: all, .2s;
+        @media (max-width: 768px){
+            font-size: 3rem;
+        }
     }
     .content{
         height: 0;
@@ -19,6 +22,9 @@
         margin-top: 2rem;
         transition: all, .2s;
         opacity: .4;
+        @media (max-width: 768px){
+            width: 100%;
+        }
         b{
             font-size: 18px;
         }
@@ -39,6 +45,9 @@
         .content{
             opacity: 1;
             height: 400px;
+            @media (max-width: 768px){
+                height: 600px;
+            }
         }
     }
     .share{
@@ -66,6 +75,9 @@
     width: 100%;
     .itens{
         flex: 1;
+    }
+    @media (max-width: 768px){
+        flex-direction: column;
     }
 }
 
