--- a/components/Sidebar/style.module.scss
+++ b/components/Sidebar/style.module.scss
@@ -40,6 +40,7 @@
 
     .form{
         width: 100%;
+        margin-bottom: 30px;
         .group{
             width: 100%;
             margin-bottom: 10px;
@@ -70,6 +71,14 @@
             &:active{
                 background-color: #093581;
             }
+        }
+    }
+    footer{
+        margin-top: auto;
+        color: rgb(90, 90, 90);
+        a:hover{
+            text-decoration: underline;
+            color: orangered;
         }
     }
 }
