--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -3,13 +3,18 @@
     flex-direction: column;
     gap: 2rem;
     border-bottom: 1px solid rgb(37, 37, 37);
-    padding: 2rem;
+    padding: 2rem 2rem 0rem 2rem;
     .date{
         width: 100%;
         font-size: 4.3rem;
         font-family: 'Times New Roman', Times, serif;
         opacity: .4;
         transition: all, .2s;
+        span{
+            font-size: 16px;
+            display: block;
+            font-family: sans-serif;
+        }
         @media (max-width: 768px){
             font-size: 3rem;
         }
