--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -84,7 +84,11 @@
     @media (max-width: 768px){
         flex-direction: column;
     }
+    color: #fff;
+    background: #02040a;
+
 }
+
 
 .loading{
     display: flex;
