--- a/components/Sidebar/style.module.scss
+++ b/components/Sidebar/style.module.scss
@@ -55,6 +55,7 @@
                 border: 1px solid rgb(44, 44, 44);
                 border-radius: 3px;
                 padding: 10px;
+                color: #fff;
             }
         }
         button{
@@ -64,6 +65,7 @@
             border: 0;
             border-radius: 3px;
             cursor: pointer;
+            color: #fff;
             
             &:hover{
                 background-color: #135ddd;
